--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -64,13 +64,13 @@
                 android:layout_marginLeft="20dp"
                 android:layout_width="41dp"
                 android:layout_height="41dp"
-                android:src="@drawable/ic_setting"
+                android:src="@drawable/iconslacklogo_"
                 android:layout_gravity="center"
                 android:id="@+id/home_img_btn_setting"/>
             <ImageButton
                 android:layout_width="41dp"
                 android:layout_height="41dp"
-                android:src="@drawable/ic_thongbao"
+                android:src="@drawable/notifil"
                 android:layout_gravity="center"
                 android:id="@+id/home_img_btn_thongbao"/>
         </LinearLayout>
@@ -107,8 +107,8 @@
                         android:layout_marginLeft="50dp"
                         android:layout_margin="10dp"
                         android:id="@+id/home_cardview_datlich"
-                        android:layout_width="80dp"
-                        android:layout_height="80dp">
+                        android:layout_width="100dp"
+                        android:layout_height="90dp">
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
@@ -117,7 +117,7 @@
                                 android:layout_gravity="center"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:src="@android:drawable/ic_menu_my_calendar"/>
+                                android:src="@drawable/calender50"/>
                             <TextView
 
                                 android:layout_gravity="center"
@@ -132,7 +132,7 @@
                         android:id="@+id/home_cardview_lichsucut"
                         android:layout_width="80dp"
                         app:cardElevation="0dp"
-                        android:layout_height="80dp">
+                        android:layout_height="90dp">
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
@@ -141,7 +141,7 @@
                                 android:layout_gravity="center"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:src="@android:drawable/ic_menu_recent_history"/>
+                                android:src="@drawable/history"/>
                             <TextView
 
                                 android:layout_gravity="center"
@@ -165,7 +165,7 @@
                                 android:layout_gravity="center"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:src="@drawable/ic_note"/>
+                                android:src="@drawable/icon_note_icon"/>
                             <TextView
 
                                 android:layout_gravity="center"
@@ -187,7 +187,7 @@
                         android:layout_marginLeft="50dp"
                         android:id="@+id/home_cardview_uudai"
                         android:layout_width="80dp"
-                        android:layout_height="80dp">
+                        android:layout_height="90dp">
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
@@ -196,7 +196,7 @@
                                 android:layout_gravity="center"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:src="@drawable/ic_calender"/>
+                                android:src="@drawable/gitf"/>
                             <TextView
 
                                 android:layout_gravity="center"
@@ -211,7 +211,7 @@
                         android:id="@+id/home_cardview_hethongsalon"
                         android:layout_width="80dp"
                         app:cardElevation="0dp"
-                        android:layout_height="80dp">
+                        android:layout_height="90dp">
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
@@ -220,7 +220,7 @@
                                 android:layout_gravity="center"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:src="@drawable/ic_calender"/>
+                                android:src="@drawable/icon_local"/>
                             <TextView
                                 android:textAlignment="center"
                                 android:layout_gravity="center"
@@ -235,7 +235,7 @@
                         app:cardElevation="0dp"
                         android:id="@+id/home_cardview_sothich"
                         android:layout_width="80dp"
-                        android:layout_height="80dp">
+                        android:layout_height="90dp">
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
@@ -244,7 +244,7 @@
                                 android:layout_gravity="center"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:src="@drawable/ic_calender"/>
+                                android:src="@drawable/heart"/>
                             <TextView
 
                                 android:layout_gravity="center"
@@ -337,7 +337,7 @@
                 android:layout_gravity="center"
                 android:layout_height="200dp"
                 android:elevation="1dp"
-                app:cardCornerRadius="100dp">
+                app:cardCornerRadius="50dp">
                 <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
