--- a/app/src/main/res/layout/activity_datlich.xml
+++ b/app/src/main/res/layout/activity_datlich.xml
@@ -185,14 +185,13 @@ salon lần trước hoặc salon gần nhất phía dưới nhé ! "
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-
                 >
                 <TextView
                     android:layout_width="100dp"
                     android:layout_height="wrap_content"
                     android:gravity="center_vertical"
                     android:layout_marginTop="5dp"
-                    android:text="HỌ VÀ TÊN"
+                    android:text="Chọn dịch vụ "
                     android:textSize="14dp"
                     android:layout_marginLeft="20dp"
                     android:textStyle="bold" />
