dung update res api

--- a/app/src/main/res/layout/item_chondichvu.xml
+++ b/app/src/main/res/layout/item_chondichvu.xml
@@ -4,47 +4,70 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:weightSum="5"
+    android:layout_margin="10dp"
+    android:gravity="center"
     android:layout_height="match_parent">
-
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="2"
-        android:src="@drawable/tocnamdep"
-        android:id="@+id/item_chondichvu_img"/>
+<androidx.cardview.widget.CardView
+    android:layout_marginLeft="5dp"
+    android:layout_marginRight="5dp"
+    android:layout_width="match_parent"
+    android:background="#C3BABA"
+    android:layout_height="match_parent">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical"
-       >
-        <TextView
+        android:gravity="center">
+        <ImageView
+            android:layout_width="300dp"
+            android:layout_height="300dp"
+android:layout_gravity="center"
+            android:src="@drawable/tocnamdep"
+            android:id="@+id/item_chondichvu_img"/>
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="ShineCombo cắt gội 10 bước"
-            android:textSize="30dp"
-            android:textColor="@color/black"
-            android:id="@+id/item_chondichvu_tvName"/>
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Đặc sắc nổi tiếng"
-            android:textColor="@color/black"
-            android:id="@+id/item_chondichvu_tvDesc"/>
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="100k"
-            android:textColor="@color/black"
-            android:id="@+id/item_chondichvu_tvPrice"/>
+            android:orientation="vertical"
+            android:background="#FFF"
+            >
+            <TextView
+                android:gravity="left"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="ShineCombo cắt gội 10 bước"
+                android:textSize="30dp"
+                android:textColor="@color/black"
+                android:id="@+id/item_chondichvu_tvName"/>
+            <TextView
+
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Đặc sắc nổi tiếng"
+                android:textColor="@color/black"
+                android:id="@+id/item_chondichvu_tvDesc"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="100k"
+                android:textStyle="bold"
+                android:textSize="20dp"
+                android:textColor="#D2F606"
+                android:id="@+id/item_chondichvu_tvPrice"/>
+        </LinearLayout>
+
     </LinearLayout>
+
+</androidx.cardview.widget.CardView>
     <com.google.android.material.button.MaterialButton
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:backgroundTint="#FFFFFF"
         android:text="Chọn"
+        android:gravity="center"
         android:textColor="@color/black"
         app:strokeColor="@color/black"
         app:strokeWidth="2dp"
         app:cornerRadius="50dp"
+        android:layout_marginBottom="10dp"
         android:id="@+id/item_chondichvu_btn_chon"/>
 </LinearLayout>
