--- a/app/src/main/res/layout/item_chondichvu.xml
+++ b/app/src/main/res/layout/item_chondichvu.xml
@@ -7,67 +7,77 @@
     android:layout_margin="10dp"
     android:gravity="center"
     android:layout_height="match_parent">
-<androidx.cardview.widget.CardView
-    android:layout_marginLeft="5dp"
-    android:layout_marginRight="5dp"
-    android:layout_width="match_parent"
-    android:background="#C3BABA"
-    android:layout_height="match_parent">
-    <LinearLayout
+
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:gravity="center">
-        <ImageView
-            android:layout_width="300dp"
-            android:layout_height="300dp"
-android:layout_gravity="center"
-            android:src="@drawable/tocnamdep"
-            android:id="@+id/item_chondichvu_img"/>
+        android:layout_height="wrap_content"
+        app:cardElevation="3dp"
+        app:cardCornerRadius="10dp"
+        app:cardUseCompatPadding="true"
+        >
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:padding="10dp"
             android:orientation="vertical"
-            android:background="#FFF"
-            >
-            <TextView
-                android:gravity="left"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="ShineCombo cắt gội 10 bước"
-                android:textSize="30dp"
-                android:textColor="@color/black"
-                android:id="@+id/item_chondichvu_tvName"/>
-            <TextView
+            android:gravity="center">
 
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Đặc sắc nổi tiếng"
+                android:orientation="vertical"
+                android:background="#FFF"
+                >
+                <ImageView
+                    android:minHeight="200dp"
+                    android:minWidth="200dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:src="@drawable/tocnamdep"
+                    android:id="@+id/item_chondichvu_img"/>
+                <TextView
+                    android:gravity="left"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="ShineCombo cắt gội 10 bước"
+                    android:textSize="20dp"
+                    android:textStyle="bold"
+                    android:textColor="@color/black"
+                    android:id="@+id/item_chondichvu_tvName"/>
+                <TextView
+
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Đặc sắc nổi tiếng"
+                    android:textColor="@color/black"
+                    android:id="@+id/item_chondichvu_tvDesc"/>
+
+                <TextView
+                    android:id="@+id/item_chondichvu_tvPrice"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="100k"
+                    android:textColor="#BD190D"
+                    android:textSize="15dp"
+                    android:textStyle="bold" />
+            </LinearLayout>
+            <com.google.android.material.button.MaterialButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:backgroundTint="#FFFFFF"
+                android:text="Chọn"
+                android:gravity="center"
                 android:textColor="@color/black"
-                android:id="@+id/item_chondichvu_tvDesc"/>
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="100k"
-                android:textStyle="bold"
-                android:textSize="20dp"
-                android:textColor="#D2F606"
-                android:id="@+id/item_chondichvu_tvPrice"/>
+                app:strokeColor="@color/black"
+                app:strokeWidth="2dp"
+                app:cornerRadius="50dp"
+                android:layout_marginBottom="10dp"
+                android:id="@+id/item_chondichvu_btn_chon"/>
         </LinearLayout>
 
-    </LinearLayout>
 
-</androidx.cardview.widget.CardView>
-    <com.google.android.material.button.MaterialButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:backgroundTint="#FFFFFF"
-        android:text="Chọn"
-        android:gravity="center"
-        android:textColor="@color/black"
-        app:strokeColor="@color/black"
-        app:strokeWidth="2dp"
-        app:cornerRadius="50dp"
-        android:layout_marginBottom="10dp"
-        android:id="@+id/item_chondichvu_btn_chon"/>
+
+    </androidx.cardview.widget.CardView>
+
 </LinearLayout>
