--- a/app/src/main/res/layout/fragment_lichsucut.xml
+++ b/app/src/main/res/layout/fragment_lichsucut.xml
@@ -5,14 +5,29 @@
     android:backgroundTint="#F6F6F6"
     android:layout_height="match_parent">
 
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="Lịch Sử Cắt"
-        android:layout_margin="20dp"
-        android:textSize="40dp"
-        android:textColor="@color/black"/>
+        android:orientation="horizontal"
+        android:layout_marginTop="5dp"
+        >
+        <ImageView
+            android:layout_margin="10dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:src="@drawable/home1"
+            android:id="@+id/btnhomeLichSuCut"
+            />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="Lịch Sử Cắt"
+            android:textColor="@color/black"
+            android:layout_marginTop="1dp"
+            android:textSize="32dp" />
+    </LinearLayout>
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
