Register UI app

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -45,11 +45,10 @@
         android:background="@drawable/custom_buttom_input"
         android:drawableStart="@drawable/ic_phone"
         android:drawableTint="#FFA318"
-        android:drawablePadding="10dp"
         android:elevation="10dp"
         android:hint="@string/phone"
         android:inputType="phone"
-        android:padding="20dp"
+        android:paddingStart="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_sign_in" />
@@ -62,7 +61,6 @@
         android:background="@drawable/custom_buttom_input"
         android:drawableStart="@drawable/ic_password"
         android:elevation="10dp"
-        android:drawablePadding="10dp"
         android:hint="@string/password"
         android:inputType="textPassword"
         android:padding="20dp"
@@ -78,8 +76,7 @@
         android:background="@drawable/custom_buttom_input"
         android:drawableStart="@drawable/ic_repeat_password"
         android:elevation="10dp"
-        android:hint="@string/repeat_password"
-        android:drawablePadding="10dp"
+        android:hint="repeat password"
         android:inputType="textPassword"
         android:padding="20dp"
         app:layout_constraintEnd_toEndOf="parent"
