--- a/app/src/main/res/layout/activity_login_2.xml
+++ b/app/src/main/res/layout/activity_login_2.xml
@@ -76,7 +76,7 @@
         android:layout_marginTop="30dp"
         android:background="@drawable/custom_button_login"
         android:elevation="20dp"
-        android:text="@string/login"
+        android:text="LOGIN"
         android:textColor="@color/white"
         android:textSize="30sp"
         android:textStyle="bold"
@@ -90,7 +90,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="25dp"
-        android:text="@string/forgot_password"
+        android:text="Forgot password"
         android:textColor="#686868"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/buttonLogin" />
@@ -101,7 +101,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="110dp"
         android:layout_marginTop="50dp"
-        android:text="@string/not_a_member"
+        android:text="Not a member?"
         android:textSize="15sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/forget_password" />
@@ -112,7 +112,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
         android:layout_marginEnd="110dp"
-        android:text="@string/register_now"
+        android:text="Register Now"
         android:textColor="#0A8ED9"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/forget_password" />
