--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -45,10 +45,11 @@
         android:background="@drawable/custom_buttom_input"
         android:drawableStart="@drawable/ic_phone"
         android:drawableTint="#FFA318"
+        android:drawablePadding="10dp"
         android:elevation="10dp"
         android:hint="@string/phone"
         android:inputType="phone"
-        android:paddingStart="20dp"
+        android:padding="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_sign_in" />
@@ -61,6 +62,7 @@
         android:background="@drawable/custom_buttom_input"
         android:drawableStart="@drawable/ic_password"
         android:elevation="10dp"
+        android:drawablePadding="10dp"
         android:hint="@string/password"
         android:inputType="textPassword"
         android:padding="20dp"
@@ -76,7 +78,8 @@
         android:background="@drawable/custom_buttom_input"
         android:drawableStart="@drawable/ic_repeat_password"
         android:elevation="10dp"
-        android:hint="repeat password"
+        android:hint="@string/repeat_password"
+        android:drawablePadding="10dp"
         android:inputType="textPassword"
         android:padding="20dp"
         app:layout_constraintEnd_toEndOf="parent"
