--- a/app/src/main/res/layout/fragment_lichsucut.xml
+++ b/app/src/main/res/layout/fragment_lichsucut.xml
@@ -28,8 +28,8 @@
             android:layout_marginTop="1dp"
             android:textSize="32dp" />
     </LinearLayout>
-    <androidx.recyclerview.widget.RecyclerView
+    <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/rcv_lichsucut"/>
+        android:id="@+id/lv_lichsucut"/>
 </LinearLayout>
