--- a/app/src/main/res/layout/item_lichsucut.xml
+++ b/app/src/main/res/layout/item_lichsucut.xml
@@ -8,45 +8,25 @@
         app:cardCornerRadius="30dp">
     <LinearLayout
         android:layout_width="match_parent"
-
         android:orientation="vertical"
         android:layout_height="match_parent">
+
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:orientation="vertical">
-            <TextView
-                android:id="@+id/tv_lichsu_diachi"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="235 ĐỘI CẤN"
-                android:textColor="@color/black"
-                android:layout_marginLeft="30dp"
-                android:layout_marginTop="30dp"/>
-            <TextView
-                android:id="@+id/tv_lichsu_thoigian"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="09/10/2022 15:54"
-                android:layout_marginLeft="30dp"/>
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
+            android:layout_height="wrap_content"
             android:orientation="horizontal">
             <ImageView
                 android:id="@+id/img_lichsu_avatar"
                 android:layout_margin="10dp"
                 android:layout_width="149dp"
-                android:layout_height="184dp"
+                android:layout_height="149dp"
                 android:src="@drawable/thuy"/>
             <LinearLayout
-                android:gravity="center"
+                android:layout_marginTop="8dp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical">
                 <LinearLayout
-
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
@@ -57,13 +37,13 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:textStyle="bold"
                         android:text="LÊ TÙNG VÂN"
                         android:layout_marginLeft="10dp"
                         android:textColor="@color/black"
                         android:id="@+id/tv_lichsu_namestylist"/>
                 </LinearLayout>
                 <LinearLayout
-
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
@@ -74,6 +54,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:textStyle="bold"
                         android:text="NGUYỄN THỊ NGA"
                         android:layout_marginLeft="10dp"
                         android:textColor="@color/black"
@@ -96,15 +77,38 @@
                         android:textColor="@color/black"
                         android:id="@+id/tv_lichsu_namedichvu"/>
                 </LinearLayout>
+
             </LinearLayout>
 
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:orientation="vertical">
+            <TextView
+                android:layout_marginTop="10dp"
+                android:id="@+id/tv_lichsu_diachi"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="235 ĐỘI CẤN"
+                android:textColor="@color/black"
+                android:layout_marginLeft="30dp"
+                />
+            <TextView
+                android:id="@+id/tv_lichsu_thoigian"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="09/10/2022 15:54"
+                android:layout_marginLeft="30dp"/>
         </LinearLayout>
         <Button
             android:id="@+id/btn_lichsu_xemchitiet"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:backgroundTint="@color/white"
-            android:textColor="@color/black"
+            android:backgroundTint="#FFC107"
+            android:textSize="20dp"
+            android:textStyle="bold"
             android:text="XEM CHI TIẾT"/>
     </LinearLayout>
 
